--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
         <header class="s-header">
 
             <div class="header-mobile">
-                <span class="mobile-home-link"><a href="index.html">Hafiz</a></span>
+                <span class="mobile-home-link"><a href="#">Hafiz</a></span>
                 <a class="mobile-menu-toggle" href="#0"><span>Menu</span></a>
             </div>
 
             <div class="row wide main-nav-wrap">
                 <nav class="column lg-12 main-nav">
                     <ul>
-                        <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
+                        <li><a href="#" class="smoothscroll">Intro</a></li>
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#works" class="smoothscroll">Works</a></li>
                         <li><a href="#gallery" class="smoothscroll">Gallery</a></li>
@@ -112,7 +112,7 @@
 
             <!-- ### about
             ================================================== -->
-            <section id="about" class="s-about target-section">
+            <section id="about" class="s-about target-section" active>
 
 
                 <div class="row about-info wide" data-animate-block>
@@ -173,10 +173,18 @@
                                         <p class="timeline__timeframe">September 2024 - Present</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    <p>Bangkit is a career preparation program that aims to produce high-caliber digital talent for world-class Indonesian technology companies and startups which is fully supported by Google, GoTo, Traveloka and the Indonesian Ministry of Education and Culture.</p>
+                                    <p>Bangkit is a career preparation program that aims to produce high-caliber digital
+                                        talent for world-class Indonesian technology companies and startups which is
+                                        fully supported by Google, GoTo, Traveloka and the Indonesian Ministry of
+                                        Education and Culture.</p>
                                     <ul>
-                                        <li>Related courses: Google Cloud Engineer Learning Path, DevOps Engineer, SRE Learning Path, Google Cloud Computing Foundations, Applied Machine Learning for Cloud Engineer, Capstone / Final Project, Soft skill & Career Development.</li>
-                                        <li>Selected as a Cloud Computing Cohort in a prestigious program, gaining expertise in Google Cloud technologies while leading projects across cloud computing, machine learning, and mobile development.</li>
+                                        <li>Related courses: Google Cloud Engineer Learning Path, DevOps Engineer, SRE
+                                            Learning Path, Google Cloud Computing Foundations, Applied Machine Learning
+                                            for Cloud Engineer, Capstone / Final Project, Soft skill & Career
+                                            Development.</li>
+                                        <li>Selected as a Cloud Computing Cohort in a prestigious program, gaining
+                                            expertise in Google Cloud technologies while leading projects across cloud
+                                            computing, machine learning, and mobile development.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -189,7 +197,7 @@
                                     <p class="timeline__timeframe">2023 - 2024</p>
                                 </div>
                                 <div class="timeline__desc">
-                                    
+
                                 </div>
                             </div>
 
@@ -464,9 +472,9 @@
                     </div>
                 </div> <!-- end works-portfolio -->
             </section> <!-- end s-works -->
-            <section class="target-section">
+            <section id="gallery" class="s-works target-section">
                 <div class="row gallery">
-                    <div class="column lg-12" id="gallery" data-animate-block>
+                    <div class="column lg-12" data-animate-block>
                         <h2 class="text-pretitle" data-animate-el>
                             My Gallery
                         </h2>
@@ -510,22 +518,22 @@
                             </div>
                         </div>
                     </div>
-                </div>                
+                </div>
             </section>
 
-            
+
 
             <!-- ### contact
             ================================================== -->
-            <section id="contact" class="s-contact target-section">
+            <section id="contact" class="target-section">
 
                 <div class="row contact-top">
-                    <div class="column lg-12">
-                        <h2 class="text-pretitle">
+                    <div class="column lg-12" data-animate-block>
+                        <h2 class="text-pretitle" data-animate-el>
                             Get In Touch
                         </h2>
 
-                        <p class="h1">
+                        <p class="h1" data-animate-el>
                             I love to hear from you.
                             Whether you have a question or just
                             want to chat about web, tech & other — shoot me a message.
@@ -554,9 +562,9 @@
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
-                            <li><a href="#0">LinkedIn</a></li>
-                            <li><a href="#0">Github</a></li>
-                            <li><a href="#0">Instagram</a></li>
+                            <li><a href="https://www.linkedin.com/in/hafizaryan/" target="_blank">Linkedin</a></li>
+                            <li><a href="https://github.com/hafizaryan" target="_blank">Github</a></li>
+                            <li><a href="https://www.instagram.com/hafizaryan_/" target="_blank">Instagram</a></li>
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
