--- a/index.html
+++ b/index.html
@@ -515,6 +515,87 @@
                                     <img src="assets/gallery/gallery-8.jpg" alt="Gallery Image 4"
                                         class="gallery-slider__image">
                                 </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-10.jpg" alt="Gallery Image 1"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-11.jpg" alt="Gallery Image 2"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-12.jpg" alt="Gallery Image 3"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-13.jpg" alt="Gallery Image 4"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-14.jpg" alt="Gallery Image 1"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-15.jpg" alt="Gallery Image 2"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-16.jpg" alt="Gallery Image 3"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-17.jpg" alt="Gallery Image 4"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-18.jpg" alt="Gallery Image 1"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-19.jpg" alt="Gallery Image 2"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-20.jpg" alt="Gallery Image 3"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-21.jpg" alt="Gallery Image 4"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-22.jpg" alt="Gallery Image 1"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-23.jpg" alt="Gallery Image 2"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-24.jpg" alt="Gallery Image 3"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-25.jpg" alt="Gallery Image 4"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-26.jpg" alt="Gallery Image 1"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-27.jpg" alt="Gallery Image 2"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-28.jpg" alt="Gallery Image 3"
+                                        class="gallery-slider__image">
+                                </div>
+                                <div class="gallery-slider__slide swiper-slide">
+                                    <img src="assets/gallery/gallery-29.jpg" alt="Gallery Image 4"
+                                        class="gallery-slider__image">
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
