--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
                         <h1 class="text-huge-title">
                             I am Hafiz Aryan, <br>
-                            a Full Stack Developer <br>
-                            & Software Tester
+                            Tech <br>
+                            Enthusiast
                         </h1>
                     </div>
 
