--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Portfolio - Hafiz Aryan Siregar</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description"
+        content="Portfolio of Hafiz Aryan Siregar, a tech enthusiast with experience in web development, software testing, and cloud computing.">
+    <meta name="author" content="Hafiz Aryan Siregar">
+    <meta name="keywords" content="Hafiz Aryan Siregar, portfolio, web development, cloud computing, software testing">
+    <meta property="og:title" content="Portfolio - Hafiz Aryan Siregar">
+    <meta property="og:description"
+        content="Explore the portfolio of Hafiz Aryan Siregar, showcasing projects in web development, cloud computing, and software testing.">
+    <meta property="og:url" content="https://hafizaryan.netlify.app">
 
     <!-- mobile specific metas
     ================================================== -->
@@ -25,6 +31,9 @@
     <link rel="icon" type="image/jpg" sizes="32x32" href="favicon.jpg">
     <link rel="icon" type="image/jpg" sizes="16x16" href="favicon.jpg">
     <link rel="manifest" href="site.webmanifest">
+
+
+
 
 </head>
 
@@ -627,7 +636,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://github.com/hafizaryan/redesign-web-disdikpku" target="_blank">
+                        <a href="https://redesignwebdisdikpku.netlify.app/" target="_blank">
                             <div class="folio-list__item-tech">View Github Documentation
                             </div>
                         </a>
@@ -848,6 +857,14 @@
 
     <!-- Java Script
     ================================================== -->
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "WebSite",
+          "name": "Portfolio - Hafiz Aryan Siregar",
+          "url": "https://hafizaryan.netlify.app"
+        }
+    </script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script>
