update dbs coding camp

--- a/index.html
+++ b/index.html
@@ -177,9 +177,25 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
+                                    <h4 class="timeline__title">Coding Camp powered by DBS Foundation</h3>
+                                        <h5 class="timeline__meta">Front-End dan Back-End Developer Cohort</h5>
+                                        <p class="timeline__timeframe">Jan 2025 - Present</p>
+                                </div>
+                                <div class="timeline__desc">
+                                    <p>Coding Camp powered by DBS Foundation Road to Future Workforce. This information
+                                        technology training program is designed with high standards to prepare graduates
+                                        with skills that are ready to be applied in the workforce. This program is the
+                                        result of a collaboration between DBS Foundation and Dicoding, which has been
+                                        held since 2022.</p>
+                                </div>
+                            </div>
+
+                            <div class="timeline__block">
+                                <div class="timeline__bullet"></div>
+                                <div class="timeline__header">
                                     <h4 class="timeline__title">Bangkit Academy</h3>
                                         <h5 class="timeline__meta">Cloud Computing Cohort</h5>
-                                        <p class="timeline__timeframe">September 2024 - Present</p>
+                                        <p class="timeline__timeframe">Sep 2024 - Jan 2025</p>
                                 </div>
                                 <div class="timeline__desc">
                                     <p>Bangkit is a career preparation program that aims to produce high-caliber digital
@@ -229,7 +245,7 @@
                                 <div class="timeline__header">
                                     <h4 class="timeline__title">UIN Suska Riau</h3>
                                         <h5 class="timeline__meta">S-1 Information System</h5>
-                                        <p class="timeline__timeframe">2021 - Present (GPA: 3.75/4)</p>
+                                        <p class="timeline__timeframe">2021 - Present (GPA: 3.75/4.00)</p>
                                 </div>
                                 <div class="timeline__desc">
                                     <ul>
@@ -414,7 +430,7 @@
                                 <div class="timeline__header">
                                     <h4 class="timeline__title">Forum Ta’aruf Sistem Informasi (FORTASI) </h3>
                                         <h5 class="timeline__meta">Chief Executive</h5>
-                                        <p class="timeline__timeframe">September - Oct 2022</p>
+                                        <p class="timeline__timeframe">Sep - Oct 2022</p>
                                 </div>
                                 <div class="timeline__desc">
                                     <p>FORTASI is an orientation program that helps new students adapt to university
@@ -435,7 +451,7 @@
                                     <h4 class="timeline__title">Forum Ta’aruf Fakultas Sains and Teknologi (FORTA FASTE)
                                         </h3>
                                         <h5 class="timeline__meta">Staff of Mentor</h5>
-                                        <p class="timeline__timeframe">September - Oct 2022</p>
+                                        <p class="timeline__timeframe">Sep - Oct 2022</p>
                                 </div>
                                 <div class="timeline__desc">
                                     <p>FORTA FASTE is an orientation program that helps new students adapt to university
@@ -832,7 +848,8 @@
 
 
     <!-- ## footer
-        ================================================== -->
+================================================== -->
+
     <footer class="s-footer">
 
         <div class="row">
