--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Portfolio - Hafiz Aryan Siregar</title>
+    <title>Hafiz Aryan Siregar</title>
     <meta name="description"
         content="Portfolio of Hafiz Aryan Siregar, a tech enthusiast with experience in web development, software testing, and cloud computing.">
     <meta name="author" content="Hafiz Aryan Siregar">
     <meta name="keywords" content="Hafiz Aryan Siregar, portfolio, web development, cloud computing, software testing">
-    <meta property="og:title" content="Portfolio - Hafiz Aryan Siregar">
+    <meta property="og:title" content="Hafiz Aryan Siregar">
     <meta property="og:description"
         content="Explore the portfolio of Hafiz Aryan Siregar, showcasing projects in web development, cloud computing, and software testing.">
     <meta property="og:url" content="https://hafizaryan.netlify.app">
