--- a/index.html
+++ b/index.html
@@ -456,6 +456,12 @@
                                 <div class="timeline__desc">
                                     <p>FORTA FASTE is an orientation program that helps new students adapt to university
                                         life by connecting them with lecturers, senior students, and alumni.</p>
+                                    <ul>
+                                        <li> Mentored new students in their adaptation to campus life.</li>
+                                        <li>Provided comprehensive information on academic programs and campus
+                                            resources.</li>
+                                        <li>Enhanced students understanding of the academic landscape.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -477,7 +483,7 @@
                     Recent Works
                 </h2>
                 <p class="h1" data-animate-el>
-                    Here are some of my favorite projects I have done lately. Feel free to check them out.
+                    Here are some of my projects I have done lately. Feel free to check them out.
                 </p>
                 <ul class="folio-list row block-lg-one-half block-stack-on-1000">
                     <li class="folio-list__item column" data-animate-el>
@@ -542,6 +548,39 @@
                         </a>
                     </li>
 
+                    <li class="folio-list__item column" data-animate-el>
+                        <a class="folio-list__item-link"
+                            href="https://w4kmd-my.sharepoint.com/:p:/g/personal/email_hafizaryan_my_id/ESQGChel7WpMn4RZfUcJDqoBE-n9M_z610WpI8LtT9vXvg?e=PHB89y"
+                            target="_blank">
+
+                            <div class="folio-list__item-text">
+                                <div class="folio-list__item-cat">
+                                    Prototype
+                                </div>
+                                <div class="folio-list__item-title">
+                                    Pet Paw Services
+                                </div>
+                                <div class="folio-list__item-desc">
+                                    Pet Paw is an app that makes it easy for pet owners to book petshop services online
+                                    Pet Paw helps facilitate by providing a platform that eases the interaction
+                                    between pet owners and petshop businesses, and promotes awareness of animal welfare.
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://www.figma.com/proto/IlHj4Wbi9fNxuryxSGV2Sd/PetPaw?node-id=0-1&t=4IBAtHD5RqSWr7PZ-1"
+                            target="_blank">
+                            <div class="folio-list__item-tech">View Prototype
+                            </div>
+                        </a>
+                        <a class="folio-list__proj-link" href="#" title="project link">
+                            <svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
+                                    fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path>
+                            </svg>
+                        </a>
+                    </li>
                     <li class="folio-list__item column" data-animate-el>
                         <a class="folio-list__item-link" href="https://sitaris.lab-si.uin-suska.ac.id" target="_blank">
 
@@ -703,10 +742,6 @@
                         </div>
                         <div class="gallery-slider__slide swiper-slide">
                             <img src="assets/gallery/gallery-8.jpg" alt="Gallery Image 4" class="gallery-slider__image">
-                        </div>
-                        <div class="gallery-slider__slide swiper-slide">
-                            <img src="assets/gallery/gallery-10.jpg" alt="Gallery Image 1"
-                                class="gallery-slider__image">
                         </div>
                         <div class="gallery-slider__slide swiper-slide">
                             <img src="assets/gallery/gallery-11.jpg" alt="Gallery Image 2"
