--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                         </a>
                     </li>
                     <li class="folio-list__item column" data-animate-el>
-                        <a class="folio-list__item-link" href="#" target="_blank">
+                        <a class="folio-list__item-link" href="https://github.com/hafizaryan" target="_blank">
 
                             <div class="folio-list__item-text">
                                 <div class="folio-list__item-cat">
