[add] linktree profile

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                         <li><a href="#works" class="smoothscroll">Works</a></li>
                         <li><a href="#gallery" class="smoothscroll">Gallery</a></li>
                         <li><a href="#contact" class="smoothscroll">Contact Me</a></li>
+                        <li><a href="link.html" target="_blank" class="smoothscroll">Social Link</a></li>
                     </ul>
                 </nav>
             </div>
@@ -886,8 +887,7 @@
                 <h3 class="text-pretitle">Social</h3>
                 <ul class="contact-social">
                     <li><a href="https://www.linkedin.com/in/hafizaryan/" target="_blank">Linkedin</a></li>
-                    <li><a href="https://github.com/hafizaryan" target="_blank">Github</a></li>
-                    <li><a href="https://www.instagram.com/hafizaryan_/" target="_blank">Instagram</a></li>
+                    <li><a href="link.html" target="_blank">View More</a></li>
                 </ul>
             </div>
             <div class="column lg-4 md-12 contact-block">
