--- a/link.html
+++ b/link.html
@@ -205,34 +205,64 @@
                 <h5>Hey everyone! This is my social media account—feel free to explore, follow, and connect!</h5>
                 <div class="link">
                     <div class="links-container">
-                        <a href="#" target="_blank" class="link-item">
+                        <a href="assets/Hafiz Aryan Siregar - Resume.pdf" target="_blank" class="link-item">
                             <i class="fa fa-file-alt"></i>
                             <span class="link-text">Curriculum Vitae</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="#" target="_blank" class="link-item">
+                        <a href="https://hafizaryan.netlify.app
+                        " target="_blank" class="link-item">
                             <i class="fa fa-briefcase"></i>
                             <span class="link-text">Portfolio</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="#" target="_blank" class="link-item">
+                        <a href="https://wa.me/6289530859619" target="_blank" class="link-item">
+                            <i class="fa-brands fa-whatsapp"></i>
+                            <span class="link-text">WhatsApp</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="mailto:hafizaryansiregar@gmail.com" target="_blank" class="link-item">
+                            <i class="fa fa-envelope"></i>
+                            <span class="link-text">Email</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/hafizaryan/
+                        " target="_blank" class="link-item">
                             <i class="fa-brands fa-linkedin"></i>
                             <span class="link-text">LinkedIn</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="#" target="_blank" class="link-item">
+                        <a href="https://github.com/hafizaryan
+                        " target="_blank" class="link-item">
                             <i class="fa-brands fa-github"></i>
                             <span class="link-text">GitHub</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="#" target="_blank" class="link-item">
+                        <a href="https://www.instagram.com/hafizaryan_/
+                        " target="_blank" class="link-item">
                             <i class="fa-brands fa-instagram"></i>
                             <span class="link-text">Instagram</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="#" target="_blank" class="link-item">
+                        <a href="https://web.facebook.com/profile.php?id=100010763163287" target="_blank"
+                            class="link-item">
                             <i class="fa-brands fa-facebook"></i>
                             <span class="link-text">Facebook</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="https://dev.to/hafizaryan_" target="_blank" class="link-item">
+                            <i class="fa-brands fa-dev"></i>
+                            <span class="link-text">Community Dev</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="https://medium.com/@hafizaryansiregar" target="_blank" class="link-item">
+                            <i class="fa-brands fa-medium"></i>
+                            <span class="link-text">Medium</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="#" target="_blank" class="link-item">
+                            <i class="fa-brands fa-behance"></i>
+                            <span class="link-text">Behance</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
                         <a href="#" target="_blank" class="link-item">
@@ -240,31 +270,25 @@
                             <span class="link-text">Dribbble</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="#" target="_blank" class="link-item">
-                            <i class="fa-brands fa-dev"></i>
-                            <span class="link-text">Community Dev</span>
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                        <a href="#" target="_blank" class="link-item">
+                        <a href="https://www.credly.com/users/hafizaryan_" target="_blank" class="link-item">
                             <i class="fa fa-link"></i>
                             <span class="link-text">Credly</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="#" target="_blank" class="link-item">
+                        <a href="https://www.cloudskillsboost.google/public_profiles/54256be2-290b-4754-af50-b4531d21d03b"
+                            target="_blank" class="link-item">
                             <i class="fa fa-link"></i>
-
-                            <span class="link-text">GCSB Profile</span>
+                            <span class="link-text">Google Cloud Skill Boost </span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
                         <a href="https://www.dicoding.com/users/hafizaryan/academies" target="_blank" class="link-item">
                             <i class="fa fa-link"></i>
-
                             <span class="link-text">Dicoding</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
                         <a href="https://g.dev/hafizaryan" target="_blank" class="link-item">
                             <i class="fa fa-link"></i>
-                            <span class="link-text">Google Developer</span>
+                            <span class="link-text">Google for Developer</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
                     </div>
