--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                         </h1>
                     </div>
 
-                    <ul class="intro-social">
-                        <li><a href="https://www.linkedin.com/in/hafizaryan/" target="_blank">Linkedin</a></li>
+                    <!-- <ul class="intro-social">
+                        <li><a href="https://www.linkedin.com/in/hafizaryan/" target="_blank">Socmed</a></li>
                         <li><a href="https://github.com/hafizaryan" target="_blank">Github</a></li>
                         <li><a href="https://www.instagram.com/hafizaryan_/" target="_blank">Instagram</a></li>
-                    </ul>
+                    </ul> -->
 
                 </div> <!-- end intro content -->
 
