--- a/link.html
+++ b/link.html
@@ -21,6 +21,7 @@
     ================================================== -->
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/link_styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         crossorigin="anonymous">
     <!-- favicons
@@ -29,171 +30,18 @@
     <link rel="icon" type="image/jpg" sizes="32x32" href="favicon.jpg">
     <link rel="icon" type="image/jpg" sizes="16x16" href="favicon.jpg">
     <link rel="manifest" href="site.webmanifest">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-        }
-
-        .judul {
-            margin-top: 60px;
-        }
-
-        body {
-            background: #141414;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 2rem;
-        }
-
-        .container {
-            width: 100%;
-            margin-top: 0;
-        }
-
-        h1 {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            margin: auto;
-            margin-bottom: 40px;
-            width: 50%;
-        }
-
-        h5 {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            margin: auto;
-            margin-bottom: 50px;
-            width: 50%;
-            text-align: justify;
-        }
-
-        .links-container {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            margin: auto;
-            width: 50%;
-            margin-bottom: 100px;
-        }
-
-        .link-item {
-            padding: 1.25rem;
-            text-decoration: none;
-            color: #1a1a1a;
-            border-radius: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 1rem;
-            transition: transform 0.2s ease;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            background: var(--color-btn-primary);
-            border-color: var(--color-btn-primary);
-            color: var(--color-btn-primary-text);
-        }
-
-        .link-item .fa-brands {
-            flex: 0 0 auto;
-            margin-right: 10px;
-        }
-
-        .link-item .fa-solid {
-            flex: 0 0 auto;
-            margin-left: 10px;
-        }
-
-        .link-text {
-            flex: 1;
-            text-align: center;
-            font-size: 1.6rem;
-        }
-
-
-        .link-item:hover {
-            color: var(--color-1);
-            outline: 0;
-            transform: scale(1.02);
-            background: var(--color-btn-primary-hover);
-            border-color: var(--color-btn-primary-hover);
-            color: var(--color-btn-primary-hover-text);
-            transition: transform 0.4s ease-in-out, background 0.4s ease-in-out, border-color 0.4s ease-in-out, color 0.4s ease-in-out;
-        }
-
-        .link-item::before {
-            opacity: 1;
-            visibility: visible;
-        }
-
-        .link-text {
-            font-weight: 500;
-            font-family: var(--font-1);
-            text-rendering: optimizeLegibility;
-            opacity: 1;
-
-        }
-
-        .link-subtext {
-            color: #666;
-            font-size: 0.9em;
-        }
-
-        @media (max-width: 768px) {
-            body {
-                padding: 1rem;
-            }
-
-            h5 {
-                width: 80%;
-            }
-
-            h1 {
-                width: 80%;
-                font-size: 3rem;
-            }
-
-            .links-container {
-                width: 90%;
-                max-width: 95%;
-            }
-
-            .link-item {
-                padding: 1.2rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            body {
-                padding: 1rem;
-            }
-
-            h1 {
-                font-size: 3rem;
-            }
-
-            .links-container {
-                width: 90%;
-                max-width: 90%;
-                padding: 0 1rem;
-            }
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- animation -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 
 <body id="top">
     <div class="container">
         <div class="s-pagewrap">
-
-            <div class="judul">
+            <div class="judul" data-aos="fade-down">
                 <h1>Hafiz Aryan Siregar</h1>
             </div>
-
             <div class="circles">
                 <span></span>
                 <span></span>
@@ -202,101 +50,62 @@
                 <span></span>
             </div>
             <div class="container">
-                <h5>Hey everyone! This is my social media account—feel free to explore, follow, and connect!</h5>
+                <h5 data-aos="fade-up">Hey everyone! This is my social media account—feel free to explore, follow, and
+                    connect!</h5>
                 <div class="link">
                     <div class="links-container">
-                        <a href="assets/Hafiz Aryan Siregar - Resume.pdf" target="_blank" class="link-item">
+                        <a href="assets/Hafiz Aryan Siregar - Resume.pdf" target="_blank" class="link-item"
+                            data-aos="fade-up">
                             <i class="fa fa-file-alt"></i>
                             <span class="link-text">Curriculum Vitae</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="https://hafizaryan.netlify.app
-                        " target="_blank" class="link-item">
+                        <a href="https://hafizaryan.netlify.app" target="_blank" class="link-item" data-aos="fade-up"
+                            data-aos-delay="100">
                             <i class="fa fa-briefcase"></i>
                             <span class="link-text">Portfolio</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="https://wa.me/6289530859619" target="_blank" class="link-item">
+                        <a href="https://wa.me/6289530859619" target="_blank" class="link-item" data-aos="fade-up"
+                            data-aos-delay="200">
                             <i class="fa-brands fa-whatsapp"></i>
                             <span class="link-text">WhatsApp</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="mailto:hafizaryansiregar@gmail.com" target="_blank" class="link-item">
+                        <a href="mailto:hafizaryansiregar@gmail.com" target="_blank" class="link-item"
+                            data-aos="fade-up" data-aos-delay="300">
                             <i class="fa fa-envelope"></i>
                             <span class="link-text">Email</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/hafizaryan/
-                        " target="_blank" class="link-item">
+                        <a href="https://www.linkedin.com/in/hafizaryan/" target="_blank" class="link-item"
+                            data-aos="fade-up" data-aos-delay="400">
                             <i class="fa-brands fa-linkedin"></i>
                             <span class="link-text">LinkedIn</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="https://github.com/hafizaryan
-                        " target="_blank" class="link-item">
+                        <a href="https://github.com/hafizaryan" target="_blank" class="link-item" data-aos="fade-up"
+                            data-aos-delay="500">
                             <i class="fa-brands fa-github"></i>
                             <span class="link-text">GitHub</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="https://www.instagram.com/hafizaryan_/
-                        " target="_blank" class="link-item">
+                        <a href="https://www.instagram.com/hafizaryan_/" target="_blank" class="link-item"
+                            data-aos="fade-up" data-aos-delay="600">
                             <i class="fa-brands fa-instagram"></i>
                             <span class="link-text">Instagram</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
-                        <a href="https://web.facebook.com/profile.php?id=100010763163287" target="_blank"
-                            class="link-item">
-                            <i class="fa-brands fa-facebook"></i>
-                            <span class="link-text">Facebook</span>
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                        <a href="https://dev.to/hafizaryan_" target="_blank" class="link-item">
-                            <i class="fa-brands fa-dev"></i>
-                            <span class="link-text">Community Dev</span>
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                        <a href="https://medium.com/@hafizaryansiregar" target="_blank" class="link-item">
-                            <i class="fa-brands fa-medium"></i>
-                            <span class="link-text">Medium</span>
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                        <a href="#" target="_blank" class="link-item">
-                            <i class="fa-brands fa-behance"></i>
-                            <span class="link-text">Behance</span>
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                        <a href="#" target="_blank" class="link-item">
-                            <i class="fa-brands fa-dribbble"></i>
-                            <span class="link-text">Dribbble</span>
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                        <a href="https://www.credly.com/users/hafizaryan_" target="_blank" class="link-item">
-                            <i class="fa fa-link"></i>
-                            <span class="link-text">Credly</span>
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                        <a href="https://www.cloudskillsboost.google/public_profiles/54256be2-290b-4754-af50-b4531d21d03b"
-                            target="_blank" class="link-item">
-                            <i class="fa fa-link"></i>
-                            <span class="link-text">Google Cloud Skill Boost </span>
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                        <a href="https://www.dicoding.com/users/hafizaryan/academies" target="_blank" class="link-item">
-                            <i class="fa fa-link"></i>
-                            <span class="link-text">Dicoding</span>
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                        <a href="https://g.dev/hafizaryan" target="_blank" class="link-item">
-                            <i class="fa fa-link"></i>
-                            <span class="link-text">Google for Developer</span>
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
