--- a/link.html
+++ b/link.html
@@ -96,6 +96,62 @@
                             <span class="link-text">Instagram</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
+                        <a href="https://web.facebook.com/profile.php?id=100010763163287" target="_blank"
+                        data-aos="fade-up" data-aos-delay="700"
+                            class="link-item">
+                            <i class="fa-brands fa-facebook"></i>
+                            <span class="link-text">Facebook</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="https://dev.to/hafizaryan_" target="_blank" class="link-item"
+                        data-aos="fade-up" data-aos-delay="800">
+                            <i class="fa-brands fa-dev"></i>
+                            <span class="link-text">Community Dev</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="https://medium.com/@hafizaryansiregar" target="_blank" class="link-item"
+                        data-aos="fade-up" data-aos-delay="900">
+                            <i class="fa-brands fa-medium"></i>
+                            <span class="link-text">Medium</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="#" target="_blank" class="link-item" 
+                        data-aos="fade-up" data-aos-delay="1000">
+                            <i class="fa-brands fa-behance"></i>
+                            <span class="link-text">Behance</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="#" target="_blank" class="link-item"
+                        data-aos="fade-up" data-aos-delay="1100">
+                            <i class="fa-brands fa-dribbble"></i>
+                            <span class="link-text">Dribbble</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="https://www.credly.com/users/hafizaryan_" target="_blank" class="link-item"
+                        data-aos="fade-up" data-aos-delay="1200">
+                            <i class="fa fa-link"></i>
+                            <span class="link-text">Credly</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="https://www.cloudskillsboost.google/public_profiles/54256be2-290b-4754-af50-b4531d21d03b"
+                            target="_blank" class="link-item"
+                            data-aos="fade-up" data-aos-delay="1300">
+                            <i class="fa fa-link"></i>
+                            <span class="link-text">Google Cloud Skill Boost </span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="https://www.dicoding.com/users/hafizaryan/academies" target="_blank" class="link-item"
+                        data-aos="fade-up" data-aos-delay="1400">
+                            <i class="fa fa-link"></i>
+                            <span class="link-text">Dicoding</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="https://g.dev/hafizaryan" target="_blank" class="link-item"
+                        data-aos="fade-up" data-aos-delay="1500">
+                            <i class="fa fa-link"></i>
+                            <span class="link-text">Google for Developer</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
                     </div>
                 </div>
             </div>
