--- a/index.html
+++ b/index.html
@@ -204,13 +204,14 @@
                                         fully supported by Google, GoTo, Traveloka and the Indonesian Ministry of
                                         Education and Culture.</p>
                                     <ul>
-                                        <li>Related courses: Google Cloud Engineer Learning Path, DevOps Engineer, SRE
+                                        <li>Completed a comprehensive curriculum covering beginner to advanced levels,
+                                            focusing on key topics like Google Cloud Engineer, DevOps Engineer, SRE
                                             Learning Path, Google Cloud Computing Foundations, Applied Machine Learning
-                                            for Cloud Engineer, Capstone / Final Project, Soft skill & Career
-                                            Development.</li>
-                                        <li>Selected as a Cloud Computing Cohort in a prestigious program, gaining
-                                            expertise in Google Cloud technologies while leading projects across cloud
-                                            computing, machine learning, and mobile development.</li>
+                                            for Cloud Engineer, Build API with Javascript. Learn about soft skills such
+                                            as growth mindset, time management, critical thinking, adaptability and
+                                            resilence, project management, professional communication, and professional
+                                            branding.</li>
+                                        <li>Led and managed a capstone team to successfully complete the project.</li>
                                     </ul>
                                 </div>
                             </div>
