[add] link sertifikat

--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                         <div class="certificate-container">
                             <img src="assets/certificates/1.png" alt="Certificate 1" loading="lazy" class="certificate-image">
                             <div class="certificate-overlay">
-                                <div class="overlay-text">View Credential</div>
+                               <a href="https://www.linkedin.com/in/hafizaryan/"> <div class="overlay-text">View Credential</div></a>
                             </div>
                         </div>
                     </div>
@@ -713,7 +713,7 @@
                         <div class="certificate-container">
                             <img src="assets/certificates/2.png" alt="Certificate 2" loading="lazy" class="certificate-image">
                             <div class="certificate-overlay">
-                                <div class="overlay-text">View Credential</div>
+                                <a href="https://w4kmd-my.sharepoint.com/:i:/g/personal/email_hafizaryan_my_id/ETdsxXRZeexFg4q7VATAzeIBxnJ-ydge-TzIMoWWT2fCmw?e=bs4ysM"><div class="overlay-text">View Credential</div></a>
                             </div>
                         </div>
                     </div>
@@ -721,7 +721,7 @@
                         <div class="certificate-container">
                             <img src="assets/certificates/3.png" alt="Certificate 3" loading="lazy" class="certificate-image">
                             <div class="certificate-overlay">
-                                <div class="overlay-text">View Credential</div>
+                                <a href="https://www.dicoding.com/certificates/L4PQ5YYRVZO1"><div class="overlay-text">View Credential</div></a>
                             </div>
                         </div>
                     </div>
@@ -729,7 +729,7 @@
                         <div class="certificate-container">
                             <img src="assets/certificates/4.png" alt="Certificate 4" loading="lazy" class="certificate-image">
                             <div class="certificate-overlay">
-                                <div class="overlay-text">View Credential</div>
+                                <a href="https://ude.my/UC-fd9dabae-26f7-43d0-8cfc-68ab0e6266e2"><div class="overlay-text">View Credential</div></a>
                             </div>
                         </div>
                     </div>
@@ -737,7 +737,7 @@
                         <div class="certificate-container">
                             <img src="assets/certificates/5.png" alt="Certificate 1" loading="lazy" class="certificate-image">
                             <div class="certificate-overlay">
-                                <div class="overlay-text">View Credential</div>
+                                <a href="https://w4kmd-my.sharepoint.com/:b:/g/personal/email_hafizaryan_my_id/EbeU3Y8QU85LvB8y8ZU4dwIBFInNxWYbyazp53tkDeTpDA?e=RoEgy4"><div class="overlay-text">View Credential</div></a>
                             </div>
                         </div>
                     </div>                    
@@ -745,7 +745,7 @@
                         <div class="certificate-container">
                             <img src="assets/certificates/6.png" alt="Certificate 1" loading="lazy" class="certificate-image">
                             <div class="certificate-overlay">
-                                <div class="overlay-text">View Credential</div>
+                                <a href="https://www.udemy.com/certificate/UC-1690f696-ec04-4fd9-98f4-f0fe3aeb5feb/"><div class="overlay-text">View Credential</div></a>
                             </div>
                         </div>
                     </div>                    
@@ -753,7 +753,7 @@
                         <div class="certificate-container">
                             <img src="assets/certificates/7.png" alt="Certificate 1" loading="lazy" class="certificate-image">
                             <div class="certificate-overlay">
-                                <div class="overlay-text">View Credential</div>
+                                <a href="https://www.credly.com/badges/7db94e85-7fb8-4322-8ab1-a514136cd73c/linked_in_profile"><div class="overlay-text">View Credential</div></a>
                             </div>
                         </div>
                     </div>                    
@@ -761,7 +761,7 @@
                         <div class="certificate-container">
                             <img src="assets/certificates/8.png" alt="Certificate 1" loading="lazy" class="certificate-image">
                             <div class="certificate-overlay">
-                                <div class="overlay-text">View Credential</div>
+                                <a href="https://www.dicoding.com/certificates/0LZ040EQKP65"><div class="overlay-text">View Credential</div></a>
                             </div>
                         </div>
                     </div>                    
