--- a/certificate.html
+++ b/certificate.html
@@ -72,7 +72,9 @@
                   class="certificate-image"
                 />
                 <div class="certificate-overlay">
-                  <div class="overlay-text">View Credential</div>
+                  <a href="https://www.linkedin.com/in/hafizaryan/">
+                    <div class="overlay-text">View Credential</div></a
+                  >
                 </div>
               </div>
             </div>
@@ -89,7 +91,10 @@
                   class="certificate-image"
                 />
                 <div class="certificate-overlay">
-                  <div class="overlay-text">View Credential</div>
+                  <a
+                    href="https://w4kmd-my.sharepoint.com/:i:/g/personal/email_hafizaryan_my_id/ETdsxXRZeexFg4q7VATAzeIBxnJ-ydge-TzIMoWWT2fCmw?e=bs4ysM"
+                    ><div class="overlay-text">View Credential</div></a
+                  >
                 </div>
               </div>
             </div>
@@ -106,7 +111,9 @@
                   class="certificate-image"
                 />
                 <div class="certificate-overlay">
-                  <div class="overlay-text">View Credential</div>
+                  <a href="https://www.dicoding.com/certificates/L4PQ5YYRVZO1"
+                    ><div class="overlay-text">View Credential</div></a
+                  >
                 </div>
               </div>
             </div>
@@ -123,7 +130,10 @@
                   class="certificate-image"
                 />
                 <div class="certificate-overlay">
-                  <div class="overlay-text">View Credential</div>
+                  <a
+                    href="https://ude.my/UC-fd9dabae-26f7-43d0-8cfc-68ab0e6266e2"
+                    ><div class="overlay-text">View Credential</div></a
+                  >
                 </div>
               </div>
             </div>
@@ -140,7 +150,10 @@
                   class="certificate-image"
                 />
                 <div class="certificate-overlay">
-                  <div class="overlay-text">View Credential</div>
+                  <a
+                    href="https://w4kmd-my.sharepoint.com/:b:/g/personal/email_hafizaryan_my_id/EbeU3Y8QU85LvB8y8ZU4dwIBFInNxWYbyazp53tkDeTpDA?e=RoEgy4"
+                    ><div class="overlay-text">View Credential</div></a
+                  >
                 </div>
               </div>
             </div>
@@ -157,7 +170,10 @@
                   class="certificate-image"
                 />
                 <div class="certificate-overlay">
-                  <div class="overlay-text">View Credential</div>
+                  <a
+                    href="https://www.udemy.com/certificate/UC-1690f696-ec04-4fd9-98f4-f0fe3aeb5feb/"
+                    ><div class="overlay-text">View Credential</div></a
+                  >
                 </div>
               </div>
             </div>
@@ -174,7 +190,10 @@
                   class="certificate-image"
                 />
                 <div class="certificate-overlay">
-                  <div class="overlay-text">View Credential</div>
+                  <a
+                    href="https://www.credly.com/badges/7db94e85-7fb8-4322-8ab1-a514136cd73c/linked_in_profile"
+                    ><div class="overlay-text">View Credential</div></a
+                  >
                 </div>
               </div>
             </div>
@@ -191,7 +210,9 @@
                   class="certificate-image"
                 />
                 <div class="certificate-overlay">
-                  <div class="overlay-text">View Credential</div>
+                  <a href="https://www.dicoding.com/certificates/0LZ040EQKP65"
+                    ><div class="overlay-text">View Credential</div></a
+                  >
                 </div>
               </div>
             </div>
