--- a/link.html
+++ b/link.html
@@ -12,27 +12,18 @@
     <meta property="og:description"
         content="Explore the portfolio of Hafiz Aryan Siregar, showcasing projects in web development, cloud computing, and software testing.">
     <meta property="og:url" content="https://hafizaryan.netlify.app">
-
-    <!-- mobile specific metas
-    ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- CSS
-    ================================================== -->
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/link_styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         crossorigin="anonymous">
-    <!-- favicons
-    ================================================== -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon.jpg">
     <link rel="icon" type="image/jpg" sizes="32x32" href="favicon.jpg">
     <link rel="icon" type="image/jpg" sizes="16x16" href="favicon.jpg">
     <link rel="manifest" href="site.webmanifest">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- animation -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 
@@ -102,6 +93,16 @@
                             <span class="link-text">Facebook</span>
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
+                        <a href="#" target="_blank" data-aos="fade-up" data-aos-delay="700" class="link-item">
+                            <i class="fa-brands fa-discord"></i>
+                            <span class="link-text">Discord</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        <a href="#" target="_blank" data-aos="fade-up" data-aos-delay="700" class="link-item">
+                            <i class="fa-brands fa-telegram"></i>
+                            <span class="link-text">Telegram</span>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
                         <a href="https://dev.to/hafizaryan_" target="_blank" class="link-item" data-aos="fade-up"
                             data-aos-delay="800">
                             <i class="fa-brands fa-dev"></i>
@@ -153,7 +154,6 @@
             </div>
         </div>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
         AOS.init();
